--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -159,7 +159,7 @@
                   <li>\(R\) es la resistencia del conductor (en ohmios).</li>
                   <li>\(t\) es el tiempo durante el cual fluye la corriente (en segundos).</li>
                 </ul>
-                <p>Supongamos que tenemos: <marcador class="resaltado5">Q</marcador> = \(2000 \, \text{J}\), <marcador class="resaltado5">I</marcador> = \(5 \, \text{A}\) y <marcador class="resaltado5">t</marcador> = \(2 \, \text{horas}\)</marcador>.</p>
+                <p>Supongamos que tenemos: <marcador class="resaltado5">Q = \(2000 \, \text{J}\)</marcador>, <marcador class="resaltado5">I = \(5 \, \text{A}\)</marcador> y <marcador class="resaltado5">t = \(2 \, \text{horas}\)</marcador>.</p>
                 <p>1J = 0.24 cal</p>
                 <p>La fórmula de la Ley de Joule para calcular la resistencia es:</p>
                 <p>\(R = \frac{Q}{I^2 \cdot t}\)</p>
@@ -185,10 +185,10 @@
                     <img src="media/calculo1-1.png" alt="">
                 </div>
                 <ul>
-                    <li><marcador class="resaltado5">Carga 1 (q<sub>1</sub>)</marcador> = 0.82 μC = 0.00000082 C</li>
-                    <li><marcador class="resaltado5">Carga 2 (q<sub>2</sub>)</marcador> = 0.47 μC = 0.00000047 C</li>
-                    <li><marcador class="resaltado5">Distancia (r)</marcador> = 0.21 m</li>
-                    <li><marcador class="resaltado5">Constante (K)</marcador> = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</li>
+                    <li><marcador class="resaltado5">Carga 1 (q<sub>1</sub>) = 0.82 μC = 0.00000082 C</marcador></li>
+                    <li><marcador class="resaltado5">Carga 2 (q<sub>2</sub>) = 0.47 μC = 0.00000047 C</marcador></li>
+                    <li><marcador class="resaltado5">Distancia (r) = 0.21 m</marcador></li>
+                    <li><marcador class="resaltado5">Constante (K) = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</marcador></li>
                 </ul>
                 <p>\( F = K\frac{q_{1}*q_{2}}{r^{2}} \)</p>
                 <p>\( F = (9x10^{9} \frac{Nm^{2}}{C^{2}}) \frac{0.82x10^{-6}C*0.47x10^{-6}C}{0.21m^{2}} \)</p>
@@ -199,12 +199,12 @@
                     <img src="media/calculo1-2.png" alt="">
                 </div>
                 <ul>
-                    <li><marcador class="resaltado5">Carga 1 (q<sub>1</sub>)</marcador> = 4 nC</li>
-                    <li><marcador class="resaltado5">Carga 2 (q<sub>2</sub>)</marcador> = 6 nC</li>
-                    <li><marcador class="resaltado5">Carga 3 (q<sub>3</sub>)</marcador> = 8 nC</li>
-                    <li><marcador class="resaltado5">Distancia 1 (r)</marcador> = 8 cm</li>
-                    <li><marcador class="resaltado5">Distancia 2 (r)</marcador> = 12 cm</li>
-                    <li><marcador class="resaltado5">Constante (K)</marcador> = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</li>
+                    <li><marcador class="resaltado5">Carga 1 (q<sub>1</sub>) = 4 nC</marcador></li>
+                    <li><marcador class="resaltado5">Carga 2 (q<sub>2</sub>) = 6 nC</marcador></li>
+                    <li><marcador class="resaltado5">Carga 3 (q<sub>3</sub>) = 8 nC</marcador></li>
+                    <li><marcador class="resaltado5">Distancia 1 (r) = 8 cm</marcador></li>
+                    <li><marcador class="resaltado5">Distancia 2 (r) = 12 cm</marcador></li>
+                    <li><marcador class="resaltado5">Constante (K) = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</marcador></li>
                 </ul>
                 <p><strong>Fuerza q<sub>1</sub> y q<sub>2</sub></strong></p>
                 <p>\( F_{1} = K\frac{q_{1}*q_{2}}{r^{2}} \)</p>
@@ -225,12 +225,12 @@
                     <img src="media/calculo1-3.png" alt="">
                 </div>
                 <ul>
-                    <li><marcador class="resaltado5">Carga 1 (q<sub>1</sub>)</marcador> = 0.14 μC</li>
-                    <li><marcador class="resaltado5">Carga 2 (q<sub>2</sub>)</marcador> = 0.14 μC</li>
-                    <li><marcador class="resaltado5">Carga 3 (q<sub>3</sub>)</marcador> = 0.14 μC</li>
-                    <li><marcador class="resaltado5">Carga 4 (q<sub>4</sub>)</marcador> = 0.14 μC</li>
-                    <li><marcador class="resaltado5">Distancia (r)</marcador> = 25 cm</li>
-                    <li><marcador class="resaltado5">Constante (K)</marcador> = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</li>
+                    <li><marcador class="resaltado5">Carga 1 (q<sub>1</sub>) = 0.14 μC</marcador></li>
+                    <li><marcador class="resaltado5">Carga 2 (q<sub>2</sub>) = 0.14 μC</marcador></li>
+                    <li><marcador class="resaltado5">Carga 3 (q<sub>3</sub>) = 0.14 μC</marcador></li>
+                    <li><marcador class="resaltado5">Carga 4 (q<sub>4</sub>) = 0.14 μC</marcador></li>
+                    <li><marcador class="resaltado5">Distancia (r) = 25 cm</marcador></li>
+                    <li><marcador class="resaltado5">Constante (K) = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</marcador></li>
                 </ul>
                 <p>Para este ejercicio, se analizará el valor de la carga para la carga inferior derecha, que será denominada como q<sub>4</sub>.</p>
                 <p>Basándose en el gráfico que nos muestra cómo actúan las cargas entre sí, tenemos que existen 3 fuerzas actuando en diversos sentidos actuando con una fuerza de repulsión sobre q<sub>4</sub>.</p>
@@ -262,12 +262,12 @@
                     <img src="media/calculo1-4.png" alt="">
                 </div>
                 <ul>
-                    <li><marcador class="resaltado5">Carga 1 (q<sub>1</sub>)</marcador> = 0.16 nC</li>
-                    <li><marcador class="resaltado5">Carga 2 (q<sub>2</sub>)</marcador> = 0.12 nC</li>
-                    <li><marcador class="resaltado5">Carga 3 (q<sub>3</sub>)</marcador> = 0.8 nC</li>
-                    <li><marcador class="resaltado5">Distancia 1 (r)</marcador> = 12 cm</li>
-                    <li><marcador class="resaltado5">Distancia 2 (r)</marcador> = 9 cm</li>
-                    <li><marcador class="resaltado5">Constante (K)</marcador> = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</li>
+                    <li><marcador class="resaltado5">Carga 1 (q<sub>1</sub>) = 0.16 nC</marcador></li>
+                    <li><marcador class="resaltado5">Carga 2 (q<sub>2</sub>) = 0.12 nC</marcador></li>
+                    <li><marcador class="resaltado5">Carga 3 (q<sub>3</sub>) = 0.8 nC</marcador></li>
+                    <li><marcador class="resaltado5">Distancia 1 (r) = 12 cm</marcador></li>
+                    <li><marcador class="resaltado5">Distancia 2 (r) = 9 cm</marcador></li>
+                    <li><marcador class="resaltado5">Constante (K) = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</marcador></li>
                 </ul>
                 <p>Suponiendo que existen 3 cargas organizadas como se muestra en el esquema anterior. ¿Cuál sería la fuerza resultante que actúa sobre la carga q1 (la carga de la izquierda)?</p>
                 <p>En este ejercicio, vamos a hacer uso del método del paralelogramo para encontrar la fuerza resultante sobre q1.</p>
@@ -538,11 +538,11 @@
                 </div>
                 <p><strong>Cálculo para números reales</strong></p>
                 <ul>
-                    <li><marcador class="resaltado5">Voltaje (V)</marcador> = 10 V</li>
-                    <li><marcador class="resaltado5">Frecuencia</marcador> (F) = 50 Hz</li>
-                    <li><marcador class="resaltado5">Resistencia (R)</marcador> = 5Ω</li>
-                    <li><marcador class="resaltado5">Inductancia (L)</marcador> = 0.1 H</li>
-                    <li><marcador class="resaltado5">Capacitancia (C)</marcador> = 50 μF = 0.00005 F</li>
+                    <li><marcador class="resaltado5">Voltaje (V) = 10 V</marcador></li>
+                    <li><marcador class="resaltado5">Frecuencia (F) = 50 Hz</marcador></li>
+                    <li><marcador class="resaltado5">Resistencia (R) = 5Ω</marcador></li>
+                    <li><marcador class="resaltado5">Inductancia (L) = 0.1 H</marcador></li>
+                    <li><marcador class="resaltado5">Capacitancia (C) = 50 μF = 0.00005 F</marcador></li>
                 </ul>
                 <p>Para calcular la corriente en el circuito en serie, necesitamos conocer la fuente de voltaje o la corriente inicial en el inductor o el capacitor. Supongamos que conectamos una fuente de voltaje de 10V a este circuito.</p>
                 <p>Para calcular la corriente en el circuito, podemos utilizar la Ley de Ohm. La impedancia total (Z) de un circuito en serie con resistancia (R), inductancia (L) y capacitancia (C) es la suma de las impedancias individuales:</p>
@@ -640,10 +640,10 @@
                     <img src="media/calculo9-4.png" alt="">
                 </div>
                 <ul>
-                    <li><marcador class="resaltado5">Fuente (V)</marcador> = 10 ∠30∘ V</li>
-                    <li><marcador class="resaltado5">Voltaje 1 (V)</marcador> = 3.02 ∠65.2∘ V</li>
-                    <li><marcador class="resaltado5">Voltaje 2 (V)</marcador> = 1.34 ∠-31.3∘ V</li>
-                    <li><marcador class="resaltado5">Corriente (I<sub>10 ∠30∘</sub>)</marcador> = 1.44 ∠38.8∘ V</li>
+                    <li><marcador class="resaltado5">Fuente (V) = 10 ∠30∘ V</marcador></li>
+                    <li><marcador class="resaltado5">Voltaje 1 (V) = 3.02 ∠65.2∘ V</marcador></li>
+                    <li><marcador class="resaltado5">Voltaje 2 (V) = 1.34 ∠-31.3∘ V</marcador></li>
+                    <li><marcador class="resaltado5">Corriente (I<sub>10 ∠30∘</sub>) = 1.44 ∠38.8∘ V</marcador></li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/calculo9-3.png" alt="">
