--- a/electronica.html
+++ b/electronica.html
@@ -73,6 +73,24 @@
         </div> 
         <br>
         <br>
+        <div class="buttons__cover">
+            <input type="button" class="btn__Whoami-cover" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
+            <input type="button" class="btn__readMore-cover" value="Leer Más">
+        </div>
+        <div class="container__banner">
+            <div class="banner">
+                <div class="banner__icon-robot">
+                    <img src="media/robot-y.png" id="icon_robot" alt="">
+                </div>
+                <div class="banner__icon-fire">
+                    <img src="media/fire.png" id="icon_fire" alt="">
+                </div>    
+                <div class="banner__text">
+                    <h2>Descubre la vanguardia tecnológica y sé parte del cambio hacia un futuro digital imparable.</h2>
+                    <a href="#">Leer más</a>
+                </div>
+            </div>
+        </div>
     </main>
     <script src="js/script.js"></script>
 </body>
