--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>La inteligencia artificial ha dado paso a un nuevo horizonte de posibilidades. Desde los sistemas de aprendizaje automático hasta los algoritmos de procesamiento de lenguaje natural, en este blog exploraremos cómo la IA está cambiando nuestras vidas. Examinaremos casos de uso emocionantes, desde la automatización de tareas hasta la toma de decisiones basada en datos, y discutiremos las implicaciones éticas y sociales de esta revolución tecnológica.</p>
                 <p>Prepárate para sumergirte en un mundo de conocimiento y descubrimiento mientras desentrañamos los misterios de la tecnología. ¡Acompáñame en esta emocionante travesía y desbloqueemos juntos las maravillas de los sistemas computacionales!</p>
                 <div class="buttons__cover">
-                    <input type="button" class="btn__Whoami-cover" value="Acerca de mí">
+                    <input type="button" class="btn__Whoami-cover" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
                     <input type="button" class="btn__readMore-cover" value="Leer Más">
                 </div>
             </div>
