--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -26,6 +26,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,6 +39,7 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
                 <br>
                 <h1>Cálculo básico de componentes electrónicos</h1>
                 <p>En el apasionante mundo de la electrónica, cada dispositivo y circuito es como un intrincado rompecabezas de componentes interconectados. Para cualquier entusiasta de la tecnología, comprender cómo funcionan y cómo interactúan estos componentes es fundamental. Desde resistencias hasta condensadores y más allá, el cálculo básico de componentes electrónicos es el punto de partida esencial para desentrañar los secretos detrás de la creación y operación de dispositivos electrónicos. En este blog, vamos a adentrarnos en el fascinante reino de los componentes electrónicos, explorando los conceptos clave que nos permitirán comprender su comportamiento y aplicaciones en el mundo real.</p>
