--- a/electronica/capacitor.html
+++ b/electronica/capacitor.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,7 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
                 <br>
                 <h1>Capacitor</h1>
                 <p>El capacitor es un componente pasivo capaz de almacenar carga eléctrica. Consiste en dos placas conductoras separadas por un material aislante conocido como dieléctrico. Las placas pueden estar hechas de diferentes materiales conductores, como aluminio o cobre, mientras que el dieléctrico puede ser aire, papel, plástico, cerámica u otros materiales específicos.</p>
