--- a/electronica/diodo.html
+++ b/electronica/diodo.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,7 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
                 <br>
                 <h1>Diodo</h1>
                 <p>En el vasto mundo de la electrónica, los componentes desempeñan papeles cruciales en la construcción y operación de circuitos. Uno de los componentes más fundamentales es el diodo. Al igual que la resistencia eléctrica, el diodo desempeña un papel esencial en el control y la dirección del flujo de corriente eléctrica. Este artículo explorará en profundidad el diodo, su funcionamiento y su importancia en la electrónica.</p>
