--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -26,6 +26,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,6 +39,7 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
                 <br>
                 <h1>Inductor</h1>
                 <p>Un inductor o bobina es un componente pasivo que se caracteriza por su capacidad para almacenar energía en un campo magnético generado por el flujo de corriente eléctrica a través de él. Consiste en una bobina de alambre enrollada alrededor de un núcleo, que puede ser de aire, hierro, ferrita u otros materiales ferromagnéticos. Cuanto más vueltas tenga la bobina o mayor sea la permeabilidad del núcleo, mayor será la inductancia del inductor.</p>
