--- a/electronica/resistencia.html
+++ b/electronica/resistencia.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,7 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
                 <br>
                 <h1>Resistencia</h1>
                 <p>La resistencia eléctrica tiene el propósito de impedir el flujo de electrones, los cuales suelen viajar a través de un conductor. Por lo tanto, la resistencia cumple con el papel de limitar la corriente de electrones que llega al circuito, para que este no se queme o eleve su temperatura por encima de lo requerido.</p>
