--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -26,6 +26,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,6 +39,7 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
                 <br>
                 <h1>Transistor</h1>
                 <p>Antes de la invención del transistor, los sistemas electrónicos se basaban en bulbos de vacío o válvulas termoiónicas. Estos dispositivos eran usados en radios, computadoras y equipos de telecomunicaciones para amplificar señales eléctricas y actuar como interruptores. Sin embargo, los bulbos tenían grandes desventajas: eran grandes, consumían mucha energía, generaban mucho calor y eran frágiles, lo que los hacía propensos a fallos frecuentes. Además, su tamaño limitaba la miniaturización de los dispositivos electrónicos y su vida útil era limitada. La necesidad de una alternativa más eficiente impulsó la búsqueda de nuevos dispositivos. En 1947, los científicos de Bell Labs, John Bardeen, Walter Brattain y William Shockley, crearon el primer transistor, una pequeña pieza de silicio capaz de amplificar y conmutar señales de manera mucho más eficiente. Esta tecnología permitió el desarrollo de computadoras portátiles, teléfonos móviles y una amplia gama de dispositivos electrónicos, lo que dio lugar a la era digital en la que vivimos.</p>
