--- a/electronica/unknown.html
+++ b/electronica/unknown.html
@@ -26,6 +26,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,6 +39,7 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
                 <br>
                 <h1></h1>
                 <p></p>
