--- a/hacking.html
+++ b/hacking.html
@@ -25,6 +25,7 @@
                         <li><a href="network.html">Networking</a></li>
                         <li><a href="ia.html">Inteligencia Artificial</a></li>
                         <li><a href="hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,7 @@
     <main>
         <div class="cover">
             <div class="text__enlaces-cover">
+                <br>
                 <br>
                 <h1>Protegiendo tus pasos digitales: Seguridad en línea para un mundo conectado.</h1>
                 <p>Checa los posts disponibles con consejos, tendencias, noticias sobre seguridad informática, metodologías, herramientas y más.</p>
