--- a/ia.html
+++ b/ia.html
@@ -25,6 +25,7 @@
                         <li><a href="network.html">Networking</a></li>
                         <li><a href="ia.html">Inteligencia Artificial</a></li>
                         <li><a href="hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,7 @@
     <main>
         <div class="cover">
             <div class="text__enlaces-cover">
+                <br>
                 <br>
                 <h1>Inteligencia Artificial: El futuro ahora, desbloqueando el poder de las máquinas pensantes.</h1>
                 <p>Checa los post disponibles acerca de los últimos avances sobre aprendizaje automático, redes neuronales, chatbots, visión artificial y procesamiento del lenguaje natural.</p>                                
