--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a href="network.html">Networking</a></li>
                         <li><a href="ia.html">Inteligencia Artificial</a></li>
                         <li><a href="hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,7 @@
     <main>
         <div class="cover">
             <div class="text__information-cover">
+                <br>
                 <br>
                 <h1>¡Bienvenidos a mi blog sobre tecnología avanzada!</h1>
                 <p>Aquí encontrarás un mundo fascinante donde la electrónica, las redes IP, la ciberseguridad y la inteligencia artificial se fusionan para impulsar el futuro. Únete a mí en este viaje emocionante mientras exploramos los avances más recientes en estos campos y descubrimos cómo están transformando nuestra sociedad.</p>
