--- a/network/dhcp.html
+++ b/network/dhcp.html
@@ -26,6 +26,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,6 +39,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>DHCP</h1>
                 <p>El Protocolo de Configuración Dinámica de Host (DHCP, por sus siglas en inglés) es una parte esencial de la infraestructura de redes modernas. Este protocolo permite la asignación automática y dinámica de direcciones IP a dispositivos en una red.</p>
                 <p>DHCP es un protocolo de red que permite la asignación de direcciones IP y otros parámetros de configuración de red a dispositivos, como computadoras, impresoras y dispositivos móviles, en una red local. Antes de profundizar en el proceso, es importante comprender algunos términos clave:</p>
