--- a/network/dns.html
+++ b/network/dns.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>DNS (Domain Name System)</h1>
                 <p>¿Alguna vez te has preguntado cómo funciona la magia detrás de la navegación en Internet? Cuando escribes una dirección web en tu navegador, como "www.ejemplo.com", esperas que te lleve a la página que deseas. Detrás de esta aparente simplicidad, se encuentra un componente esencial y fundamental de la infraestructura de Internet: el Sistema de Nombres de Dominio o DNS.</p>
                 <p>El DNS es una compleja red de servidores y protocolos que traduce los nombres de dominio legibles para los humanos, como "ejemplo.com", en direcciones IP (Protocolo de Internet) numéricas que las máquinas puedan entender y localizar en la red. En esencia, actúa como una agenda telefónica gigante que permite que los navegadores encuentren y se conecten con los servidores que alojan las páginas web y otros servicios en línea.</p>
