--- a/network/enlace.html
+++ b/network/enlace.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Enlaces de Agregación</h1>
                 <p>Los enlaces de agregación, también conocidos como agregación de enlaces o bonding, son una técnica utilizada en redes informáticas para combinar múltiples conexiones de red físicas en una sola conexión lógica. Esto se hace con el fin de aumentar el ancho de banda disponible y mejorar la fiabilidad de la conexión.</p>
                 <p>Los enlaces de agregación funcionan combinando dos o más conexiones de red físicas en una sola conexión lógica. Este proceso se realiza en la capa de enlace de datos del modelo OSI, donde se crea un único canal de comunicación virtual a través del cual se pueden enviar y recibir datos.</p>
