--- a/network/icmp.html
+++ b/network/icmp.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>ICMP</h1>
                 <p>El Protocolo de Mensajes de Control de Internet (ICMP por sus siglas en inglés) es un componente fundamental de la suite de protocolos de Internet. ICMP opera en la capa de red del modelo OSI y se utiliza para el diagnóstico, control y gestión de redes IP. A través de sus diversos tipos de mensajes y códigos, ICMP proporciona información sobre el estado y la eficiencia de la comunicación en la red. </p>
                 <h2>Paquetes ICMP</h2>
