--- a/network/smtp.html
+++ b/network/smtp.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>SMTP (Simple Mail Transfer Protocol)</h1>
                 <p>En el apasionante mundo de la comunicación en línea, el correo electrónico se ha convertido en una herramienta esencial para mantenernos conectados y compartir información en todo el mundo. Detrás de esta forma de comunicación se encuentra el SMTP (Simple Mail Transfer Protocol), un protocolo fundamental que permite el envío y la recepción de correos electrónicos de manera rápida y confiable.</p>
                 <p>SMTP, o Protocolo de Transferencia de Correo Simple, es un protocolo de red estándar utilizado para enviar y entregar correos electrónicos entre servidores de correo electrónico. Fue definido por Jon Postel en 1982 y desde entonces se ha convertido en el pilar de la infraestructura de correo electrónico en Internet.</p>
