--- a/network/ssh.html
+++ b/network/ssh.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Telnet y SSH</h1>
                 <p>Cuando se trata de conectarse y administrar sistemas remotos, dos protocolos fundamentales surgen en el mundo de la informática: SSH y Telnet. Ambos permiten la comunicación entre dispositivos a través de una red, pero presentan diferencias esenciales en términos de seguridad y funcionalidad. En este artículo, exploraremos qué son SSH y Telnet, cómo se utilizan en entornos Linux y Windows, y cómo difieren en sus características técnicas.</p>
                 <p>Tanto SSH como Telnet pueden utilizarse en sistemas operativos Linux y Windows para acceder y administrar dispositivos remotos. Sin embargo, debido a las diferencias en seguridad y funcionalidad, se recomienda encarecidamente el uso de SSH en lugar de Telnet siempre que sea posible.</p>
