--- a/network/vlan.html
+++ b/network/vlan.html
@@ -24,6 +24,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -36,6 +37,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>VLAN</h1>
                 <p>Las Redes de Área Local Virtuales, o VLANs (del inglés "Virtual Local Area Networks"), son una herramienta esencial en el mundo de las redes informáticas. Permiten segmentar una red física en múltiples redes lógicas, lo que brinda flexibilidad, seguridad y eficiencia en la administración de redes. </p>
                 <p>Una VLAN es una red lógica creada dentro de una red física. En lugar de depender de la ubicación física de los dispositivos, como lo hacen las redes tradicionales, las VLANs permiten agrupar dispositivos lógicamente, incluso si están ubicados en diferentes lugares físicos.</p>
