--- a/network/arp.html
+++ b/network/arp.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>ARP</h1>
                 <p>El Protocolo de Resolución de Dirección (ARP, por sus siglas en inglés) es una parte crucial de la comunicación en redes de área local (LAN). ARP se encarga de traducir direcciones IP a direcciones MAC en redes locales, como Ethernet, permitiendo que los dispositivos se comuniquen de manera eficiente en una red. Las direcciones IP son utilizadas a nivel de capa de red (capa 3), mientras que las direcciones MAC son utilizadas en la capa de enlace de datos (capa 2). En este artículo, exploraremos en detalle el funcionamiento de ARP y su estructura de encabezado.</p>
                 <h2>Dirección IP</h2>
