--- a/network/comandos.html
+++ b/network/comandos.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Comandos Básicos en Dispositivos de Red</h1>
                 <p>Los equipos de red Huawei y Cisco son ampliamente utilizados en entornos de red para proporcionar conectividad confiable y segura. Aquí se presentan algunos comandos básicos para la administración y configuración de estos equipos.</p>
                 
