--- a/network/ftp.html
+++ b/network/ftp.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>FTP (File Transfer Protocol)</h1>
                 <p>FTP o Protocolo de Transferencia de Archivos es una herramienta esencial que ha sido un pilar fundamental en la transferencia de datos durante décadas, desempeñado un papel clave en el intercambio de información y archivos entre sistemas de computadoras en todo el mundo.</p>
                 <p>El FTP es un protocolo de red que permite transferir archivos de una computadora a otra a través de una red, como Internet. Fue desarrollado por Abhay Bhushan en 1971, cuando era estudiante en el MIT, y desde entonces ha sido ampliamente adoptado y estandarizado.</p>
