--- a/network/http.html
+++ b/network/http.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>HTTP (Protocolo de Transferencia de Hipertexto)</h1>
                 <p>HTTP ha sido el cimiento clave que ha permitido la expansión y popularización de la World Wide Web. A través de HTTP, los usuarios pueden acceder a una inmensa cantidad de recursos, desde páginas web y archivos multimedia hasta servicios en línea y aplicaciones interactivas.</p>
                 <p>HTTP es un protocolo de aplicación que se utiliza para la comunicación entre el cliente (generalmente un navegador web) y el servidor que aloja los recursos solicitados. Fue desarrollado por Tim Berners-Lee en 1991 como parte de su propuesta para crear la World Wide Web, y desde entonces se ha convertido en el protocolo estándar para la transferencia de datos en la web.</p>
