--- a/network/https.html
+++ b/network/https.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>HTTPS</h1>
                 <p>En el mundo digital actual, la seguridad de la información es esencial. Una de las formas más importantes de proteger tus datos mientras navegas por la web es a través de HTTPS, o Protocolo de Transferencia de Hipertexto Seguro. En este artículo, te explicaremos qué es HTTPS, cómo funciona y por qué es crucial para tu seguridad en línea. ¡Incluso te sumergiremos brevemente en el mundo técnico para que puedas comprender mejor este proceso vital!</p>
                 <p>Imagina que estás enviando una carta importante por correo. Si alguien interceptara esa carta en el camino, podría leer su contenido. HTTPS es como un sobre cerrado para tu información en línea. Protege los datos que compartes entre tu navegador y los sitios web, asegurando que solo tú y el sitio puedan acceder a ellos.</p>
