--- a/network/ipv4.html
+++ b/network/ipv4.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>IPv4</h1>
                 <p>IPv4, o Protocolo de Internet versión 4, es la cuarta revisión del protocolo fundamental que ha impulsado Internet desde sus inicios. A pesar de su antigüedad y limitaciones, IPv4 sigue siendo ampliamente utilizado en la actualidad. En este artículo, exploraremos todos los aspectos clave de IPv4, desde los tipos de direcciones IP hasta el subneteo y la diferencia entre direcciones públicas y privadas.</p>
                 <p>IPv4 es el cuarto y más ampliamente utilizado protocolo de Internet en la historia de Internet. Fue desarrollado en la década de 1980 y se convirtió en el estándar predominante para la comunicación en línea y la asignación de direcciones IP. IPv4 utiliza direcciones IP de 32 bits, lo que permite aproximadamente 4.3 mil millones de direcciones únicas.</p>
