--- a/network/ipv6.html
+++ b/network/ipv6.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>IPv6</h1>
                 <p>IPv6, o Protocolo de Internet versión 6, es la sexta revisión del protocolo fundamental que impulsa Internet. Fue desarrollado como una solución al agotamiento de direcciones IPv4 y ofrece una cantidad virtualmente ilimitada de direcciones IP. A pesar de su introducción, IPv4 sigue siendo ampliamente utilizado, pero IPv6 se está implementando gradualmente para satisfacer las crecientes demandas de direcciones IP en un mundo cada vez más conectado.</p>
                 <p>IPv6 utiliza direcciones IP de 128 bits, en comparación con las direcciones IPv4 de 32 bits, lo que permite una cantidad masiva de direcciones únicas. Esto es esencial para acomodar la creciente cantidad de dispositivos y servicios en línea. A continuación, exploraremos los aspectos clave de IPv6.</p>
