--- a/network/networking.html
+++ b/network/networking.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Conceptos Básicos del Networking</h1>
                 <p>El networking, en el contexto de la informática y las tecnologías de la información, se refiere a la práctica de conectar dispositivos y sistemas entre sí para facilitar la comunicación y el intercambio de recursos. El término abarca una amplia gama de actividades relacionadas con la creación, administración y mantenimiento de redes de computadoras, tanto a nivel local como global.</p>
                 <p>El networking puede tener diferentes propósitos y aplicaciones, que van desde compartir archivos e impresoras en una red local hasta acceder a recursos y servicios a través de Internet.</p>
