--- a/network/osi.html
+++ b/network/osi.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Modelo OSI</h1>
                 <p>En el mundo de las redes informáticas, la comunicación entre dispositivos es fundamental para el intercambio de información. Para comprender cómo se establece esta comunicación, entra en juego el Modelo OSI (Open Systems Interconnection), un marco de referencia que divide el proceso de comunicación en una serie de capas interconectadas. Creado en 1984 por la Organización Internacional de Normalización (ISO), el Modelo OSI proporciona una estructura clara para entender cómo los dispositivos en una red colaboran para transmitir datos.</p>
                 <div class="blog-image-grande">
