--- a/network/portsecurity.html
+++ b/network/portsecurity.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Seguridad de Puertos</h1>
                 <p>En el mundo de la tecnología de redes, la seguridad es una preocupación primordial. Con la creciente cantidad de amenazas cibernéticas, es fundamental implementar medidas sólidas de seguridad en todos los niveles de la infraestructura de red. Una de las áreas clave en la que las organizaciones pueden mejorar su postura de seguridad es mediante el uso de funcionalidades de seguridad de puerto. En este artículo, exploraremos las soluciones de seguridad de puerto ofrecidas por dos de los principales proveedores de equipos de red: Cisco y Huawei.</p>
                 <h2>¿Qué es la seguridad de puerto?</h2>
