--- a/network/red.html
+++ b/network/red.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Dispositivos de Red</h1>
                 <p>Los dispositivos de red son componentes esenciales para la comunicación y la transferencia de datos en cualquier infraestructura de red. Aquí vamos a explorar algunos de los dispositivos más comunes y su función en una red:</p>
                 <br>
