--- a/network/static.html
+++ b/network/static.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Rutas estáticas</h1>
                 <p>En el mundo de las redes, las rutas son esenciales para determinar cómo los paquetes de datos viajan desde su origen hasta su destino. Las rutas estáticas son configuraciones manuales que permiten a los administradores de red definir explícitamente el camino que seguirán los datos a través de la red. Aunque su uso está limitado en redes más pequeñas o con un diseño simple, son fundamentales para comprender cómo funcionan las rutas más complejas en entornos empresariales.</p>
                 <p>Una ruta es el camino que sigue un paquete de datos desde su punto de origen hasta su destino final. Los routers utilizan rutas para decidir por cuál interfaz enviar los datos. Las rutas se pueden configurar de manera automática mediante protocolos de enrutamiento dinámico (como OSPF, RIP, o BGP) o de forma manual como rutas estáticas.</p>
