--- a/ia/matplotlib.html
+++ b/ia/matplotlib.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Matplolib</h1>
                 <p>Matplotlib es una biblioteca de visualización de datos en Python que proporciona una amplia gama de herramientas para crear gráficos estáticos, interactivos y tridimensionales de alta calidad. Junto con Seaborn, otra biblioteca de visualización popular.</p>
                 <p>Con Matplotlib es posible realizar un trazado 2D que produce figuras en una variedad de formatos y se integra en muchos entornos diferentes, incluidos Python scripts, Jupyter notebooks, interfaces gráficas de usuario, y más. Es flexible y permite a los usuarios crear una amplia gama de visualizaciones, desde simples gráficos de línea hasta sofisticados gráficos tridimensionales.</p>
