--- a/ia/transformers.html
+++ b/ia/transformers.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Transformers</h1>
                 <p>Los modelos basados en transformers han revolucionado el campo del aprendizaje profundo en los últimos años, y se han convertido en una de las tecnologías más influyentes en el procesamiento del lenguaje natural (NLP), la visión por computadora, la traducción automática y muchas otras áreas. En este artículo, exploraremos en detalle qué son los transformers, cómo funcionan, los diferentes tipos que existen y sus aplicaciones en el mundo del aprendizaje profundo.</p>
                 <h2>Estructura y Funcionamiento</h2>
