--- a/ia/algoritmos.html
+++ b/ia/algoritmos.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Algoritmos de Machine Learning</h1>
                 <p>La inteligencia artificial (IA) ha experimentado un crecimiento exponencial en los últimos años, y dos de sus pilares fundamentales son el Machine Learning y el Deep Learning. Estos enfoques se utilizan para enseñar a las máquinas cómo aprender patrones y tomar decisiones de manera autónoma. Veamos en qué consisten y cómo se diferencian.</p>
                 <p>El Machine Learning, o aprendizaje automático, es una rama de la IA que permite a las computadoras aprender de datos y experiencias pasadas para tomar decisiones sin ser programadas explícitamente. Los algoritmos de Machine Learning pueden clasificarse en dos categorías principales: supervisados y no supervisados.</p>
