--- a/ia/conceptos.html
+++ b/ia/conceptos.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Conceptos clave del Deep Learning</h1>
                 <p>El mundo del Deep Learning puede parecer complejo, pero detrás de su apariencia hay conceptos fundamentales que son esenciales para entender cómo las máquinas aprenden y procesan información. Aquí, te sumergiremos más profundamente en estos conceptos, proporcionando explicaciones detalladas y ejemplos sencillos:</p>
                 <h2>Pesos</h2>
