--- a/ia/deepLearning.html
+++ b/ia/deepLearning.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Deep Learning</h1>
                 <p>En este artículo, exploraremos cómo esta increíble tecnología ha revolucionado el campo de la inteligencia artificial, permitiendo que las computadoras realicen tareas complejas de manera asombrosamente similar al cerebro humano. No importa si no tienes experiencia en tecnología, explicaremos los conceptos clave de forma amigable y comprensible.</p>
                 <h2>¿Qué es el Deep Learning?</h2>
