--- a/ia/keras.html
+++ b/ia/keras.html
@@ -26,6 +26,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,6 +39,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Keras</h1>
                 <p>En el vasto mundo del aprendizaje profundo, TensorFlow y Keras emergen como dos de las herramientas más poderosas y populares. Pero, ¿qué son exactamente y cómo se relacionan entre sí?</p>
                 <h2>Tensorflow</h2>
