--- a/ia/machineLearning.html
+++ b/ia/machineLearning.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Machine Learning</h1>
                 <p>En este artículo, exploraremos cómo esta asombrosa tecnología está cambiando la forma en que interactuamos con la inteligencia artificial y cómo está transformando diversas industrias en la actualidad.</p>
                 <h2>¿Qué es el Machine Learning?</h2>
