--- a/ia/numpy.html
+++ b/ia/numpy.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Numpy</h1>
                 <p>NumPy, que significa "Numerical Python", es una biblioteca de código abierto para Python que proporciona una poderosa colección de herramientas y funciones para trabajar con matrices y arreglos multidimensionales. NumPy es extremadamente eficiente en el manejo de grandes conjuntos de datos numéricos y es ampliamente utilizado en una variedad de campos, incluyendo la ciencia de datos, la ingeniería, la física, las matemáticas y más.</p>
                 <h2>Ventajas de NumPy sobre Listas en Python</h2>
