--- a/ia/pandas.html
+++ b/ia/pandas.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Pandas</h1>
                 <p>En el vasto mundo del aprendizaje automático (Machine Learning), las librerías juegan un papel fundamental al proporcionar herramientas y funcionalidades para el análisis de datos, la creación de modelos y la implementación de algoritmos. Entre las librerías más populares se encuentran TensorFlow, Scikit-learn, Keras y PyTorch, cada una con sus propias características y ventajas. Sin embargo, en este artículo nos centraremos en Pandas, una de las librerías más utilizadas para el procesamiento y análisis de datos en Python.</p>
                 <h2>Librerías de Machine Learning</h2>
