--- a/hacking/defensa.html
+++ b/hacking/defensa.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Sistemas de Defensa</h1>
                 <p>En la era digital actual, la ciberseguridad es uno de los pilares fundamentales para el funcionamiento seguro de las organizaciones. Las amenazas cibernéticas crecen en número y sofisticación, lo que exige una estrategia integral que combine múltiples capas de defensa. En este blog, exploraremos los principales sistemas de defensa en ciberseguridad: desde firewalls hasta plataformas de orquestación, automatización de seguridad (SOAR) y más.</p>
                 <div class="blog-image-grande">
