--- a/hacking/deteccion.html
+++ b/hacking/deteccion.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Detección y Bloqueo de Tráfico de Red</h1>
                 <p>La seguridad de red es una prioridad clave para proteger los sistemas de ataques y actividades no autorizadas. Entre las herramientas más utilizadas para detectar y bloquear el tráfico de red, destacan Snort, pfSense e iptables en sistemas basados en Linux y Unix, y como alternativas en Windows esta Windows Firewall.</p>
                 <h2>Snort</h2>
