--- a/hacking/expresiones.html
+++ b/hacking/expresiones.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Expresiones Regulares en Linux: Herramientas y Ejemplos</h1>
                 <p>Las expresiones regulares (regex o regexp) son una poderosa herramienta utilizada en Linux y otros sistemas operativos para buscar, extraer y manipular patrones de texto en archivos y cadenas de texto. En Linux, hay varias herramientas que admiten expresiones regulares, como 'grep', 'sed', 'awk', 'sort', entre otras. A continuación, exploraremos algunas de las expresiones regulares más útiles junto con ejemplos prácticos utilizando estas herramientas.</p>
                 <div class="blog-image">
