--- a/hacking/firewall.html
+++ b/hacking/firewall.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Fortinet</h1>
                 <p>Fortinet es reconocido como uno de los líderes en el mercado de soluciones de seguridad, particularmente por su producto FortiGate, que se clasifica como un Next-Generation Firewall (NGFW). Estos firewalls van más allá del filtrado básico de paquetes para ofrecer capacidades avanzadas de protección, como la inspección profunda de paquetes (DPI), la prevención de intrusiones (IPS), el control de aplicaciones, la protección contra malware y la gestión de acceso remoto seguro mediante VPN. La plataforma FortiGate combina varias funciones esenciales de seguridad de red en una solución unificada, permitiendo a las organizaciones gestionar la seguridad con mayor eficiencia.</p>
                 <div class="blog-image-grande">
