--- a/hacking/owasp.html
+++ b/hacking/owasp.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>OWASP Top 10: Las Principales Vulnerabilidades de Seguridad en Aplicaciones Web</h1>
                 <p>En el mundo cada vez más interconectado de hoy, la seguridad de las aplicaciones web es de suma importancia. Las vulnerabilidades en el software pueden exponer datos sensibles, permitir accesos no autorizados y poner en riesgo la privacidad y la integridad de los usuarios. Para abordar estas preocupaciones, la OWASP (Open Web Application Security Project) ha desarrollado el OWASP Top 10, una lista de las diez vulnerabilidades más críticas que afectan a las aplicaciones web. En este artículo, exploraremos el OWASP Top 10 a detalle, explicando cada vulnerabilidad de manera comprensible para todos.</p>
                 <ol >
