--- a/hacking/anonimato.html
+++ b/hacking/anonimato.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Anonimato en Internet</h1>
                 <p>El anonimato en Internet es una preocupación cada vez más importante en un mundo digital altamente interconectado. Mantener tu privacidad en línea se ha vuelto esencial, especialmente con la creciente cantidad de datos personales que se recopilan y se comparten en la web. Afortunadamente, existen diversas técnicas y herramientas disponibles para ayudarte a proteger tu identidad en línea.</p>
                 <p>El anonimato en Internet es fundamental por varias razones:</p>
