--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -26,6 +26,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,6 +39,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Archivos Sensibles en Linux: Protegiendo la Privacidad y la Seguridad</h1>
                 <p>Los sistemas Linux son ampliamente utilizados en todo el mundo debido a su estabilidad, rendimiento y, sobre todo, su seguridad. Sin embargo, para mantener esa seguridad, es esencial conocer y proteger los archivos y rutas sensibles que pueden contener información crítica o conceder acceso privilegiado al sistema. En este artículo, exploraremos algunas de las rutas y archivos más sensibles en sistemas Linux y por qué es importante protegerlos.</p>
                 <div class="blog-image-grande">
