--- a/hacking/fases.html
+++ b/hacking/fases.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Explorando las Fases del Hacking: Entendiendo el Ciclo de Ataque</h1>
                 <p>El hacking es una actividad que abarca diversas etapas, cada una con su propio propósito y función específica. Al comprender las distintas fases del hacking, podemos entender mejor cómo se llevan a cabo los ataques cibernéticos y cómo podemos defendernos contra ellos.</p>
                 <ol>
