--- a/hacking/fuzzing.html
+++ b/hacking/fuzzing.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Fuzzing Web</h1>
                 <p>El fuzzing web es una técnica esencial en la seguridad informática y la auditoría de aplicaciones web que se utiliza para descubrir recursos y archivos ocultos que no están fácilmente accesibles o visibles a través de métodos de navegación convencionales. Esta técnica busca identificar directorios, archivos y endpoints que podrían estar mal configurados o expuestos y que podrían ser vulnerables a ataques. A continuación, exploramos algunas de las herramientas más populares para realizar fuzzing en aplicaciones web.</p>
                 <div class="blog-image">
