--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Linux</h1>
                 <p>Linux es un sistema operativo de código abierto y gratuito basado en el núcleo de Linux. Fue creado inicialmente por Linus Torvalds en 1991 y ha sido desarrollado colaborativamente por una comunidad de programadores de todo el mundo desde entonces. Su diseño modular y flexible lo ha convertido en uno de los sistemas operativos más populares en una amplia gama de dispositivos y entornos, desde computadoras personales hasta servidores, dispositivos móviles y sistemas integrados.</p>
                 <br>
