--- a/hacking/linux2.html
+++ b/hacking/linux2.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Guía a los Directorios del Sistema en Linux y sus Funciones</h1>
                 <p>Linux es un sistema operativo de código abierto que utiliza una estructura de directorios jerárquica para organizar los archivos y recursos del sistema. Cada directorio tiene una función específica que contribuye al funcionamiento eficiente del sistema. En este artículo, exploraremos los directorios más importantes del sistema Linux y analizaremos sus respectivas funciones.</p>
                 <br>
