--- a/hacking/nmap.html
+++ b/hacking/nmap.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Nmap</h1>
                 <p>Nmap, abreviatura de Network Mapper, es una herramienta de código abierto utilizada para el escaneo de redes y la auditoría de seguridad. Desarrollado por Gordon Lyon, también conocido como Fyodor, se ha convertido en una herramienta esencial para administradores de redes, ingenieros de seguridad y hackers éticos. Nmap ayuda a descubrir hosts y servicios en una red, así como a identificar posibles vulnerabilidades.</p>
                 <h2>Principales funcionalidades de Nmap</h2>
