--- a/hacking/windows.html
+++ b/hacking/windows.html
@@ -25,6 +25,7 @@
                         <li><a href="../network.html">Networking</a></li>
                         <li><a href="../ia.html">Inteligencia Artificial</a></li>
                         <li><a href="../hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,6 +38,8 @@
     <main>
         <div class="cover">
             <div class="text__articulo-cover">
+                <br>
+                <br>
                 <h1>Comandos Básicos de Windows</h1>
                 <p>En el mundo de los sistemas Windows, existen dos interfaces de línea de comandos fundamentales: la Command Prompt (CMD) y PowerShell. Ambas ofrecen una serie de comandos que pueden ayudarte a administrar y controlar tu sistema operativo de manera efectiva.</p>
                 <p>La Command Prompt, o simplemente CMD, es una interfaz de línea de comandos que ha estado presente en Windows durante décadas. Aunque ha sido superada por PowerShell en términos de funcionalidad y versatilidad, aún es ampliamente utilizada y es útil para realizar tareas básicas en Windows.</p>
