--- a/devops.html
+++ b/devops.html
@@ -46,12 +46,12 @@
         </div>
         <!-- Primer artículo -->
         <div class="article-section">
-            <img src="media/imagen38.png" alt="SQL" class="article-image">
+            <img src="media/imagen38.svg" alt="SQL" class="article-image">
             <h2><a href="devops/sql.html">SQL</a></h2>
         </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
-            <img src="media/imagen38.png" alt="En proceso" class="article-image">
+            <img src="media/imagen38.svg" alt="En proceso" class="article-image">
             <h2><a href="devops/unknown.html">En proceso</a></h2>
         </div> 
         <br>
