--- a/devops.html
+++ b/devops.html
@@ -40,8 +40,8 @@
             <div class="text__enlaces-cover">
                 <br>
                 <br>
-                <h1>Redes que te impulsan: Explorando las oportunidades infinitas del networking.</h1>
-                <p>Checa los post disponibles acerca del funcionamiento y configuración de protocolos de red y sobre cómo trabaja la topología de red para transportar los paquetes de información.</p>
+                <h1>Automatiza y optimiza: El poder de DevOps en tus manos.</h1>
+                <p>Explora los artículos disponibles sobre herramientas y prácticas esenciales para desarrollar, desplegar y gestionar aplicaciones de forma eficiente. Descubre cómo la colaboración y la automatización pueden llevar tus proyectos al siguiente nivel, optimizando cada fase del ciclo de vida del software.</p>
             </div>  
         </div>
         <!-- Primer artículo -->
@@ -63,10 +63,10 @@
         <div class="container__banner">
             <div class="banner">
                 <div class="banner__icon-robot">
-                    <img src="media/robot-y.png" id="icon_robot" alt="">
+                    <img src="media/develop3.png" id="icon_robot" alt="">
                 </div>
                 <div class="banner__icon-fire">
-                    <img src="media/fire.png" id="icon_fire" alt="">
+                    <img src="media/dev1.png" id="icon_fire" alt="">
                 </div>    
                 <div class="banner__text">
                     <h2>Descubre la vanguardia tecnológica y sé parte del cambio hacia un futuro digital imparable.</h2>
