--- a/electronica.html
+++ b/electronica.html
@@ -83,10 +83,10 @@
         <div class="container__banner">
             <div class="banner">
                 <div class="banner__icon-robot">
-                    <img src="media/robot-y.png" id="icon_robot" alt="">
+                    <img src="media/electric5.png" id="icon_robot" alt="">
                 </div>
                 <div class="banner__icon-fire">
-                    <img src="media/fire.png" id="icon_fire" alt="">
+                    <img src="media/circuit-board.png" id="icon_fire" alt="">
                 </div>    
                 <div class="banner__text">
                     <h2>Descubre la vanguardia tecnológica y sé parte del cambio hacia un futuro digital imparable.</h2>
