--- a/hacking.html
+++ b/hacking.html
@@ -111,10 +111,10 @@
         <div class="container__banner">
             <div class="banner">
                 <div class="banner__icon-robot">
-                    <img src="media/robot-y.png" id="icon_robot" alt="">
+                    <img src="media/hack2.png" id="icon_robot" alt="">
                 </div>
                 <div class="banner__icon-fire">
-                    <img src="media/fire.png" id="icon_fire" alt="">
+                    <img src="media/hacker4.png" id="icon_fire" alt="">
                 </div>    
                 <div class="banner__text">
                     <h2>Descubre la vanguardia tecnológica y sé parte del cambio hacia un futuro digital imparable.</h2>
