--- a/hacking.html
+++ b/hacking.html
@@ -84,7 +84,11 @@
         <div class="article-section">
             <img src="media/imagen4.png" alt="Fuzzing" class="article-image">
             <h2><a href="hacking/fuzzing.html">Fuzzing</a></h2>
-        </div>  
+        </div>
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Google Dorking" class="article-image">
+            <h2><a href="hacking/dorking.html">Google Dorking</a></h2>
+        </div>   
         <div class="article-section">
             <img src="media/imagen4.png" alt="Sistemas de Defensa" class="article-image">
             <h2><a href="hacking/defensa.html">Sistemas de Defensa</a></h2>
@@ -111,10 +115,10 @@
         <div class="container__banner">
             <div class="banner">
                 <div class="banner__icon-robot">
-                    <img src="media/hack2.png" id="icon_robot" alt="">
+                    <img src="media/vuln4.png" id="icon_robot" alt="">
                 </div>
                 <div class="banner__icon-fire">
-                    <img src="media/hacker4.png" id="icon_fire" alt="">
+                    <img src="media/hacker1.png" id="icon_fire" alt="">
                 </div>    
                 <div class="banner__text">
                     <h2>Descubre la vanguardia tecnológica y sé parte del cambio hacia un futuro digital imparable.</h2>
