--- a/hacking.html
+++ b/hacking.html
@@ -46,64 +46,64 @@
         </div>
         <!-- Primer artículo -->
         <div class="article-section">
-            <img src="media/imagen4.png" alt="OWASP" class="article-image">
+            <img src="media/hack2.png" alt="OWASP" class="article-image">
             <h2><a href="hacking/owasp.html">OWASP Top 10</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Linux" class="article-image">
+            <img src="media/hack2.png" alt="Linux" class="article-image">
             <h2><a href="hacking/linux.html">Comandos Básicos de Linux</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Directorios del Sistema en Linux" class="article-image">
+            <img src="media/hack2.png" alt="Directorios del Sistema en Linux" class="article-image">
             <h2><a href="hacking/linux2.html">Directorios del Sistema en Linux</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Expresiones Regulares en Linux" class="article-image">
+            <img src="media/hack2.png" alt="Expresiones Regulares en Linux" class="article-image">
             <h2><a href="hacking/expresiones.html">Expresiones Regulares en Linux</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Archivos Sensibles en Linux" class="article-image">
+            <img src="media/hack2.png" alt="Archivos Sensibles en Linux" class="article-image">
             <h2><a href="hacking/archivos.html">Archivos Sensibles en Linux</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Comandos Básicos de Windows" class="article-image">
+            <img src="media/hack2.png" alt="Comandos Básicos de Windows" class="article-image">
             <h2><a href="hacking/windows.html">Comandos Básicos de Windows</a></h2>
         </div> 
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Anonimato" class="article-image">
+            <img src="media/hack2.png" alt="Anonimato" class="article-image">
             <h2><a href="hacking/anonimato.html">Anonimato</a></h2>
         </div> 
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Fases del Hacking" class="article-image">
+            <img src="media/hack2.png" alt="Fases del Hacking" class="article-image">
             <h2><a href="hacking/fases.html">Fases del Hacking</a></h2>
         </div>   
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Escaneo de Puertos" class="article-image">
+            <img src="media/hack2.png" alt="Escaneo de Puertos" class="article-image">
             <h2><a href="hacking/nmap.html">Escaneo de Puertos</a></h2>
         </div>  
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Fuzzing" class="article-image">
+            <img src="media/hack2.png" alt="Fuzzing" class="article-image">
             <h2><a href="hacking/fuzzing.html">Fuzzing</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Google Dorking" class="article-image">
+            <img src="media/hack2.png" alt="Google Dorking" class="article-image">
             <h2><a href="hacking/dorking.html">Google Dorking</a></h2>
         </div>   
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Sistemas de Defensa" class="article-image">
+            <img src="media/hack2.png" alt="Sistemas de Defensa" class="article-image">
             <h2><a href="hacking/defensa.html">Sistemas de Defensa</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Detección y Bloqueo de Tráfico de Red" class="article-image">
+            <img src="media/hack2.png" alt="Detección y Bloqueo de Tráfico de Red" class="article-image">
             <h2><a href="hacking/deteccion.html">Detección y Bloqueo de Tráfico de Red</a></h2>
         </div>  
         <div class="article-section">
-            <img src="media/imagen4.png" alt="Firewall" class="article-image">
+            <img src="media/hack2.png" alt="Firewall" class="article-image">
             <h2><a href="hacking/firewall.html">Firewall</a></h2>
         </div>  
         <!-- Nuevo artículo -->
         <div class="article-section">
-            <img src="media/imagen4.png" alt="En proceso" class="article-image">
+            <img src="media/hack2.png" alt="En proceso" class="article-image">
             <h2><a href="hacking/unknown.html">En proceso</a></h2>
         </div>  
         <br>
