--- a/network.html
+++ b/network.html
@@ -135,7 +135,7 @@
         <div class="container__banner">
             <div class="banner">
                 <div class="banner__icon-robot">
-                    <img src="media/network1.png" id="icon_robot" alt="">
+                    <img src="media/networking7.png" id="icon_robot" alt="">
                 </div>
                 <div class="banner__icon-fire">
                     <img src="media/global-network.png" id="icon_fire" alt="">
