--- a/devops/sql.html
+++ b/devops/sql.html
@@ -375,7 +375,7 @@ WHEN NOT MATCHED THEN
                 <div class="blog-image-grande">
                     <img src="media/sql7.png" alt="">
                 </div>
-                <h2>Funciones y Operadores</h2>
+                <h2>Funciones y operadores</h2>
                 <p>Las funciones en SQL son herramientas que permiten realizar cálculos o manipular datos de manera más eficiente dentro de una consulta. Estas funciones se agrupan en dos categorías principales: funciones de agregación y funciones escalares. Las funciones son extremadamente útiles para hacer análisis, transformaciones de datos y obtener resultados específicos a partir de los datos almacenados en las tablas de la base de datos.</p>
                 <h6>Funciones de Agregación</h6>
                 <p>Las funciones de agregación toman múltiples valores de una columna y los procesan para devolver un solo valor de resumen. Son ideales cuando necesitas analizar un conjunto de datos o agrupar información.</p>
